--- a/resource.rc
+++ b/resource.rc
@@ -16,7 +16,7 @@
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 IDD_DIALOG1 DIALOG 0, 0, 251, 199
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
-CAPTION "ExtIO RTLTCP"
+CAPTION "ExtIO RTLUDP"
 FONT 8, "Ms Shell Dlg"
 {
     EDITTEXT        IDC_HOSTNAME, 85, 25, 136, 12, ES_AUTOHSCROLL, WS_EX_LEFT
